


############################################################################################





Version 1.5
	- Version 1.5.0

Developer Version
	- 1.0.1 Development
	- 1.0.2 Development
	- 1.0.3 Development
	- 1.0.4 Development
	- 1.0.5 Development
	- 1.0.6 Development
	- 1.0.7 Development
	- 1.5.0 Stable
	- 1.5.1 Stable
	- 1.5.2 Stable
	- 1.5.3 Stable
	- 1.5.4 Stable
	- 1.5.5 Stable

Building Steps: 2753



 Version 1.5.5 Stable
-----------------------------------------------------------------

 - bug #0000154: File mail.php generates errors on loading.
 - bug #0000155: It can only one comment written to one news.
 - bug #0000156: Missing language define in the english language file.
 - bug #0000158: Converting @ symbols into __NO_SPAM__ in converted mailsadresses.
 - bug #0000159: The template manager cannot execute the chmod function.
 - bug #0000152: Displaying a part of the news in the login module, if the login
                 module is on the right side of the page.

 - security fixed: 

 - bug fixed: The search-class cannot search on a MS SQL Server.
 - bug fixed: The comments loaded without the email adress.
 - bug fixed: If a person who writes a comment doenst have a gravatar
              icon, he gets now the default gravatar logo.

 - changed: 

 - added: 




Version 1.5.4 Stable
-----------------------------------------------------------------

 - bug #0000148: you cannot add more then one comment on a news:
                 drop the primary key for the comments table
 - bug #0000149: konqueror display error
 - bug #0000151: incorrect sql string; search result has also protected
                 and privat content files

 - security fixed: 

 - bug fixed: tree view for the webpage tree (backend)
 - bug fixed: the language selector selects not the lcorrect language in the sidemenu editor
 - bug fixed: all documents in the document list have the lang variable
 - bug fixed: internal downloads has the lang variable in the url