@@ -9,9 +9,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 2753</build>
+	<build>Build 2761</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>03.06.2007 - 14:44</release_date>
+	<release_date>03.06.2007 - 16:29</release_date>
 	<toenda_copyright>2003 - 2007</toenda_copyright>
 </version>
