@@ -28,7 +28,7 @@
 
 ############################################################################################
 #
-# VERSION 1.5.4
+# VERSION 1.5.5
 #
 ############################################################################################
 
@@ -37,6 +37,7 @@
 *
 
 if(!defined('_MSG_NO_ALBUM_WITH_THIS_ID'))     define('_MSG_NO_ALBUM_WITH_THIS_ID', 'The System dont have found a album with this ID!');
+if(!defined('_MSG_CREATE_ALBUM_FIRST'))        define('_MSG_CREATE_ALBUM_FIRST', '* Create a album first *');
 
 *
 *
