@@ -3,7 +3,7 @@
 	http://binarybonsai.com/kubrick/
 	
 	Ported by Jonathan Naumann
-	http://www.toenda.com | http://vandango.toenda.com
+	http://www.toenda.com | http://www.vandango.com
 
 	This theme was designed and built by Michael Heilemann,
 	whose blog you will find at http://binarybonsai.com/
@@ -242,9 +242,22 @@ toendaCMS specific code
 .news_content_box{ padding-bottom: 10px; }
 
 /* legal */
-.legal{ font-size: 9px; color: #555; }
-a.legal, a.legal:link, a.legal:visited{ color: #555; text-decoration: none; }
-.legal a:hover{ text-decoration: underline; color: #555; }
+.legal {
+	font-size: 9px;
+	color: #555;
+}
+
+a.legal,
+a.legal:link,
+a.legal:visited {
+	color: #555;
+	text-decoration: none;
+}
+
+.legal a:hover {
+	text-decoration: underline;
+	color: #555;
+}
 
 
 /* title */
@@ -406,10 +419,13 @@ a.submenu:hover {
 
 
 /* toplevel - topmenu */
-a.toplevel, a.toplevel:link, a.toplevel:visited, a.toplevel:active {
+a.toplevel, 
+a.toplevel:link, 
+a.toplevel:visited, 
+a.toplevel:active {
 	font: 1.0em Arial, Sans-Serif;
 	background: #317BAA;
-	color: white;
+	color: #fff;
 	letter-spacing: 1px;
 	text-decoration: none;
 }
@@ -419,14 +435,19 @@ a.toplevel:hover {
 	text-decoration: none;
 	letter-spacing: 1px;
 }
-a.toplevelActive, a.toplevelActive:link, a.toplevelActive:visited, a.toplevelActive:active {
+a.toplevelActive, 
+a.toplevelActive:link, 
+a.toplevelActive:visited, 
+a.toplevelActive:active {
 	font: 1.0em Arial, Sans-Serif;
 	background: white;
 	color: #333 !important;
 	text-decoration: none;
 	letter-spacing: 1px;
 }
-a.toplevelActive:hover { text-decoration: none; }
+a.toplevelActive:hover {
+	text-decoration: none;
+}
 
 
 /* mainlinks - default links */
